--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         spread: 80,
         origin: { y: 0.6 }
       });
-      alert('Yay! You said Yes! 💖');
+      alert('Yay! You said Yes! 💖 You made me my life');
     }
   </script>
 
