alert change kiya hai

--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
         spread: 800,
         origin: { y: 0.6 }
       });
-      alert('Yay! You said Yes! 💖 You made me my life');
+      alert('💖 padh gyi na mere pyaar mein');
     }
   </script>
 
 </body>
 </html>
+
 
